examples/errors/syntax09.cpp
#include <stdio.h>

int main()
{
	for(int i=0;i<5;i++)
	{
		printf("%i\n",i);
	}}
    return 0;  // TODO: more informative error message
}

